[package]
name = "wally"
description = "Package manager for Roblox"
version = "0.3.1"
license = "MPL-2.0"
authors = ["Lucien Greathouse <lucien@uplift.games>"]
edition = "2018"

[workspace]
members = [
    ".",
    "wally-registry-backend",
]

default-members = [
    ".",
    "wally-registry-backend",
]

[lib]
name = "libwally"
path = "src/lib.rs"

[[bin]]
name = "wally"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
blake3 = "0.3.7"
crossterm = "0.22.1"
dirs = "3.0.1"
env_logger = "0.8.1"
fs-err = "2.5.0"
git2 = "0.16.1"
hex = "0.4.2"
indoc = "1.0.3"
log = "0.4.11"
once_cell = "1.5.2"
opener = "0.5.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
rpassword = "5.0.1"
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
structopt = "0.3.18"
tempfile = "3.1.0"
toml = "0.5.6"
toml_edit = "0.2.0"
url = { version = "2.1.1", features = ["serde"] }
walkdir = "2.3.1"
whoami = "1.1.2"
zip = "0.5.11"
globset = "0.4.8"

[dev-dependencies]
insta = "1.1.0"

[features]
vendored-libgit2 = ["git2/vendored-libgit2"]
